# dogcat

./: .gitignore  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
scripts/: setup.sh  testrail.py
src/tests/: conftest.py  mailtm.py  test_homepage_login.py
