[tool.poetry]
name = "dogcat"
version = "0.1.0"
description = ""
authors = ["Lillian Tsai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2024.2"
playwright = "^1.49.1"
pytest-playwright = "^0.6.2"
pytest-bdd = "^8.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
